--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -52,7 +52,7 @@ section {
   padding: 25px;
   width: 25%;
   height: 100%;
-  background: #f9fbfc 0% 0% no-repeat padding-box;
+  background: #f9fbfc;
   box-shadow: 1px 1px 1px #00000029;
   opacity: 1;
   font-family: "Figtree", sans-serif;
@@ -112,10 +112,9 @@ section {
   top: 0;
   left: 0;
   cursor: pointer;
-  padding: 18px;
+  padding: 0 18px 0 0;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 5px;
 }
